objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Age_maximum__c</fullName>
        <label>Age maximum</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domaine__c</fullName>
        <label>Domaine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MRH</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>FPP</fullName>
                </value>
                <value>
                    <fullName>DCRC</fullName>
                </value>
                <value>
                    <fullName>MKT</fullName>
                </value>
                <value>
                    <fullName>HA</fullName>
                </value>
                <value>
                    <fullName>LDP</fullName>
                </value>
                <value>
                    <fullName>I&amp;E</fullName>
                </value>
                <value>
                    <fullName>TRANSVERSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domaine_tudes__c</fullName>
        <label>Domaine études</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gestion</fullName>
                </value>
                <value>
                    <fullName>Droit</fullName>
                </value>
                <value>
                    <fullName>Economie</fullName>
                </value>
                <value>
                    <fullName>Sciences (mathématiques, physique,...)</fullName>
                </value>
                <value>
                    <fullName>Sciences humaines (lettres,...)</fullName>
                </value>
                <value>
                    <fullName>Ingénieur</fullName>
                </value>
                <value>
                    <fullName>Santé (pharmacie, vétérinaire,…)</fullName>
                </value>
                <value>
                    <fullName>Bac ES (économique et sociale)</fullName>
                </value>
                <value>
                    <fullName>Bac S (scientifique)</fullName>
                </value>
                <value>
                    <fullName>Bac L (littéraire)</fullName>
                </value>
                <value>
                    <fullName>Bac STMG</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domaine_tudes_formule__c</fullName>
        <formula>IF(INCLUDES( Domaine_tudes__c ,&quot;Gestion&quot;),&quot;Gestion &quot;,&quot;&quot;) &amp;
IF(INCLUDES( Domaine_tudes__c ,&quot;Sciences (mathématiques, physique,...)&quot;),&quot;Sciences (mathématiques, physique,...) &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Sciences humaines (lettres,...)&quot;),&quot;Sciences humaines (lettres,...) &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Ingénieur&quot;),&quot;Ingénieur &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Santé (pharmacie, vétérinaire,…)&quot;),&quot;Santé (pharmacie, vétérinaire,…) &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Autre&quot;),&quot;Autre &quot;,&quot;&quot;) &amp;
IF(INCLUDES( Domaine_tudes__c ,&quot;Gestion&quot;),&quot;Gestion &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Droit&quot;),&quot;Droit &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Bac STMG&quot;),&quot;Bac STMG &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Bac L (littéraire)&quot;),&quot;Bac L (littéraire) &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Bac S (scientifique)&quot;),&quot;Bac S (scientifique) &quot;,&quot;&quot;) &amp; 
IF(INCLUDES( Domaine_tudes__c ,&quot;Bac ES (économique et sociale)&quot;),&quot;Bac ES (économique et sociale) &quot;,&quot;&quot;) &amp;
IF(INCLUDES( Domaine_tudes__c ,&quot;Economie&quot;),&quot;Economie &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domaine études formule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Famille__c</fullName>
        <label>Famille / Domaine</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Family</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accompagnement Carrières</fullName>
                </value>
                <value>
                    <fullName>Accompagnement entreprises = RDV</fullName>
                </value>
                <value>
                    <fullName>Accompagnement pédagogique</fullName>
                </value>
                <value>
                    <fullName>Accord Cadre Formation Continue =</fullName>
                </value>
                <value>
                    <fullName>Achats</fullName>
                </value>
                <value>
                    <fullName>Alternance</fullName>
                </value>
                <value>
                    <fullName>Annuaires</fullName>
                </value>
                <value>
                    <fullName>Atelier</fullName>
                </value>
                <value>
                    <fullName>Au choix</fullName>
                </value>
                <value>
                    <fullName>Business Weeks</fullName>
                </value>
                <value>
                    <fullName>Careers Days</fullName>
                </value>
                <value>
                    <fullName>Célébration</fullName>
                </value>
                <value>
                    <fullName>Chaires Conjointes</fullName>
                </value>
                <value>
                    <fullName>Chaires d’enseignement et de recherche (&gt;1Me sur 4/5 ans)</fullName>
                </value>
                <value>
                    <fullName>Colloques</fullName>
                </value>
                <value>
                    <fullName>Conférence</fullName>
                </value>
                <value>
                    <fullName>Conférences non payantes (notoriété)</fullName>
                </value>
                <value>
                    <fullName>Conférences non payantes (pédagogiques)</fullName>
                </value>
                <value>
                    <fullName>Conférences non payantes (type gd public)</fullName>
                </value>
                <value>
                    <fullName>Conférences non payantes (type scientifique)</fullName>
                </value>
                <value>
                    <fullName>Conférences payantes (par l&apos;auditeur, participant)</fullName>
                </value>
                <value>
                    <fullName>Conférences payantes (par l&apos;intervenant-casHEC)</fullName>
                </value>
                <value>
                    <fullName>Confier 1 projet à 1 étudiant</fullName>
                </value>
                <value>
                    <fullName>Conseil institutionnel =</fullName>
                </value>
                <value>
                    <fullName>Corporate Discovery Session</fullName>
                </value>
                <value>
                    <fullName>CVThèque</fullName>
                </value>
                <value>
                    <fullName>Développement Commercial et Relation client</fullName>
                </value>
                <value>
                    <fullName>Développement personnel</fullName>
                </value>
                <value>
                    <fullName>Dons Fondation =&gt; individu ou entreprise  (idem EMLYON)</fullName>
                </value>
                <value>
                    <fullName>Educational project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Parcours</fullName>
                </value>
                <value>
                    <fullName>Certificat</fullName>
                </value>
                <value>
                    <fullName>Diplome</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_suiveur__c</fullName>
        <formula>Suiveur__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID suiveur</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Libelle_Produit__c</fullName>
        <formula>ProductCode + &quot; : &quot; + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Libellé Produit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Localisation_pr_ciser_dans_l_opp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Localisation à préciser dans l&apos;opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ne_pas_afficher_sur_le_site_EML__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Cocher ce champ pour ne pas exporter sur le site EML</description>
        <inlineHelpText>Cocher ce champ pour ne pas exporter sur le site EML</inlineHelpText>
        <label>Ne pas afficher sur le site EML</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ne_pas_synchroniser_avec_Kreactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ne pas synchroniser avec Kreactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Niveau_d_etudes_numero__c</fullName>
        <formula>CASE(TEXT(Niveau_d_tudes__c),
&apos;Seconde&apos;,7,
&apos;Première&apos;,8,
&apos;Terminale&apos;,9,
&apos;Bac&apos;,10,
&apos;Bac + 1&apos;,20,
&apos;Bac + 2&apos;,30,
&apos;Bac + 3&apos;,40,
&apos;Bac + 4&apos;,50,
&apos;Bac + 5 et +&apos;,60,
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Niveau d&apos;études numéro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Niveau_d_exp_rience__c</fullName>
        <label>Niveau d&apos;expérience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-2 ans</fullName>
                </value>
                <value>
                    <fullName>3-5 ans</fullName>
                </value>
                <value>
                    <fullName>6-10 ans</fullName>
                </value>
                <value>
                    <fullName>+ de 10 ans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Niveau_d_tudes__c</fullName>
        <label>Niveau d&apos;études</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seconde</fullName>
                </value>
                <value>
                    <fullName>Première</fullName>
                </value>
                <value>
                    <fullName>Terminale</fullName>
                </value>
                <value>
                    <fullName>Bac</fullName>
                </value>
                <value>
                    <fullName>Bac + 1</fullName>
                </value>
                <value>
                    <fullName>Bac + 2</fullName>
                </value>
                <value>
                    <fullName>Bac + 3</fullName>
                </value>
                <value>
                    <fullName>Bac + 4</fullName>
                </value>
                <value>
                    <fullName>Bac + 5 et +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Niveau_xp_pro_num_ro__c</fullName>
        <formula>CASE(TEXT(  Niveau_d_exp_rience__c ), 
&apos;0-2 ans&apos;,10, 
&apos;3-5 ans&apos;,20, 
&apos;6-10 ans&apos;,30, 
&apos;+ de 10 ans&apos;,40, 
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Niveau xp pro numéro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_d_heures__c</fullName>
        <label>Nombre d&apos;heures</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_de_jours__c</fullName>
        <label>Nombre de jours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objectif__c</fullName>
        <label>Objectif</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PR-LO10</fullName>
                </value>
                <value>
                    <fullName>PR-LO20</fullName>
                </value>
                <value>
                    <fullName>PR-LO30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pack_la_carte__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pack à la carte</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Produit_Pack__c</fullName>
        <formula>RecordType.DeveloperName = &quot;Pack&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Produit Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reprise_Lot_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise Lot 2015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suiveur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suiveur</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Produits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_External_Id__c</fullName>
        <description>Champ technique qui contient la copie de l&apos;Id de l&apos;enregistrement 
en production</description>
        <externalId>true</externalId>
        <label>TECH_External_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18caracter__c</fullName>
        <description>Id Salesforce sur 18 caractères</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Id Salesforce sur 18 caractères</inlineHelpText>
        <label>18caracter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>produit_unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Ce champ est rempli par WF, il permet d&apos;éviter tout doublon dans le code produit</description>
        <externalId>true</externalId>
        <label>produit unique</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>OFFRESEXECDEVProgrammeslong</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>contains</operation>
            <value>OFFRES EXEC DEV Programmes longs</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Programme</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Produits OFFRES EXEC DEV Programmes long</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Produits_BBA</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Suiveur__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>BBA,CA_BBA,INTBBA</value>
        </filters>
        <label>Produits BBA</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Produits_Casa</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Famille__c</columns>
        <columns>ID_suiveur__c</columns>
        <columns>Suiveur__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>contains</operation>
            <value>CA_</value>
        </filters>
        <label>Produits Casa</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Produits_MS</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Suiveur__c</columns>
        <columns>ID_suiveur__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>contains</operation>
            <value>Mastères,PROGRAMMES MASTERES</value>
        </filters>
        <label>Produits MS</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Produits_qui_remontent_sur_le_site</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ne_pas_afficher_sur_le_site_EML__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>OFFRES EXEC DEV Programmes Certifiants,OFFRES EXEC DEV Programmes courts</value>
        </filters>
        <filters>
            <field>PRODUCT2.DESCRIPTION</field>
            <operation>notContain</operation>
            <value>Dynamics</value>
        </filters>
        <label>Produits qui NE remontent PAS sur le web</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Produits_qui_remontent_sur_le_web</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ne_pas_afficher_sur_le_site_EML__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>OFFRES EXEC DEV Programmes Certifiants,OFFRES EXEC DEV Programmes courts</value>
        </filters>
        <label>Produits qui remontent sur le web</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Programmes_courts_Certificats_sp_PGm</fullName>
        <columns>Pack_la_carte__c</columns>
        <columns>Format__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>OFFRES EXEC DEV Programmes Certifiants,OFFRES EXEC DEV Programmes courts</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Pack</value>
        </filters>
        <filters>
            <field>Format__c</field>
            <operation>equals</operation>
            <value>Certificat</value>
        </filters>
        <filters>
            <field>PRODUCT2.DESCRIPTION</field>
            <operation>notContain</operation>
            <value>Dynamics</value>
        </filters>
        <filters>
            <field>Pack_la_carte__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Programmes courts - Certificats spé PGM</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Programmes_courts_Packs_Ad_Hoc</fullName>
        <columns>Pack_la_carte__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Famille__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Nombre_d_heures__c</columns>
        <columns>Nombre_de_jours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>OFFRES EXEC DEV Programmes Certifiants,OFFRES EXEC DEV Programmes courts</value>
        </filters>
        <filters>
            <field>Pack_la_carte__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Programmes courts - Packs Ad Hoc</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Programmes_courts_Packs_Ad_Hoc1</fullName>
        <columns>Pack_la_carte__c</columns>
        <columns>Format__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>OFFRES EXEC DEV Programmes Certifiants,OFFRES EXEC DEV Programmes courts</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Module</value>
        </filters>
        <filters>
            <field>Format__c</field>
            <operation>notEqual</operation>
            <value>Court</value>
        </filters>
        <filters>
            <field>PRODUCT2.DESCRIPTION</field>
            <operation>notContain</operation>
            <value>Dynamics</value>
        </filters>
        <label>Programmes courts - Module|Format certif</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Programmes_courts_Transfo_digitale</fullName>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Famille__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Nombre_d_heures__c</columns>
        <columns>Nombre_de_jours__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>OFFRES EXEC DEV Programmes Certifiants,OFFRES EXEC DEV Programmes courts</value>
        </filters>
        <filters>
            <field>Famille__c</field>
            <operation>equals</operation>
            <value>Transformation Digitale</value>
        </filters>
        <label>Programmes courts - Transfo digitale</label>
        <language>fr</language>
    </listViews>
    <recordTypes>
        <fullName>Autre</fullName>
        <active>true</active>
        <label>Autre</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dons</fullName>
        <active>true</active>
        <description>Pour la collecte des fonds ( Dons &amp; Mécenat)</description>
        <label>Dons</label>
    </recordTypes>
    <recordTypes>
        <fullName>Module</fullName>
        <active>true</active>
        <label>Module</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pack</fullName>
        <active>true</active>
        <label>Pack</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partenariat</fullName>
        <active>true</active>
        <label>Partenariat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prestation</fullName>
        <active>true</active>
        <label>Prestation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Programme</fullName>
        <active>true</active>
        <label>Programme</label>
    </recordTypes>
    <recordTypes>
        <fullName>Relations_Employeur</fullName>
        <active>true</active>
        <label>Relations Employeur</label>
    </recordTypes>
    <recordTypes>
        <fullName>Selection</fullName>
        <active>true</active>
        <description>Produit de sélection</description>
        <label>Selection</label>
    </recordTypes>
    <recordTypes>
        <fullName>Taxe</fullName>
        <active>true</active>
        <label>Taxe</label>
    </recordTypes>
</CustomObject>